# cfd_kokkos

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp
cmake/: build_or_find_fmt.cmake  build_or_find_kokkos.cmake
config/: config.json
include/io/: save_vtk.hpp
include/mesh/: airfoil.hpp  common_function.hpp  functor.hpp  graph.hpp  mesh_shared.hpp  solver.hpp  unsturctured_solver.hpp
include/util/: cfd_shared.hpp  parameters.hpp
src/io/: save_vtk.cpp
src/mesh/: airfoil.cpp  common_function.cpp  graph.cpp  solver.cpp  unstructured_solver.cpp
